# robotframework-testselection

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: Jenkinsfile  github-actions.yml  gitlab-ci.yml
docs/: packaging-proposal.md  pytest-support-proposal.md  release-notes-v0.1.0.md  release-notes-v0.2.0.md  slack-announcement-v0.1.0.md
docs/adr/: ADR-001-pipeline-architecture.md  ADR-002-embedding-model-and-storage.md  ADR-003-selection-algorithm-strategy.md  ADR-004-robot-framework-integration.md  ADR-005-project-structure-and-uv.md  ADR-006-text-representation-strategy.md  ADR-007-cicd-integration-and-caching.md  ADR-008-reliability-and-observability.md
docs/architecture/: domain-model.md  implementation-roadmap.md
docs/research/: compass_artifact_wf-fd8b16a0-0008-4bc3-9105-e4553444d251_text_markdown.md  multistage_pipeline_report.md
results/deep_analysis/: ANALYSIS.md  all_results.json
scripts/: coverage_comparison.py  deep_coverage_analysis.py  rerun_all_missing.py  rerun_dpp_facility.py  rerun_missing_strategies.py  run_coverage_comparison.py  run_robot_selection.py
scripts/experiments/: pytest_collection_experiment.py  vectorize_pytest_experiment.py
src/TestSelection/: __init__.py  cli.py
src/TestSelection/embedding/: __init__.py  embedder.py  models.py  ports.py
src/TestSelection/execution/: __init__.py  listener.py  prerun_modifier.py  runner.py
src/TestSelection/parsing/: __init__.py  datadriver_reader.py  keyword_resolver.py  suite_collector.py  text_builder.py
src/TestSelection/pipeline/: __init__.py  artifacts.py  cache.py  errors.py  execute.py  select.py  vectorize.py  vectorize_pytest.py
src/TestSelection/pytest/: __init__.py  collector.py  plugin.py  runner.py  text_builder.py
src/TestSelection/selection/: __init__.py  dpp.py  facility.py  filtering.py  fps.py  kmedoids.py  registry.py  strategy.py
src/TestSelection/shared/: __init__.py  config.py  types.py
tests/benchmarks/: conftest.py  test_parsing_benchmark.py  test_pytest_benchmark.py  test_selection_benchmark.py
tests/fixtures/: sample.robot  sample_datadriver.csv
tests/fixtures/sample_pytest_suite/: conftest.py  test_api.py  test_auth.py  test_helpers.py
tests/integration/: conftest.py  test_full_pipeline.py  test_stage1_vectorize.py  test_stage2_select.py  test_stage3_execute.py
tests/unit/: test_cli.py  test_cli_framework.py  test_pytest_collector.py  test_pytest_plugin.py  test_pytest_text_builder.py
tests/unit/test_embedding/: test_embedder.py  test_models.py
tests/unit/test_execution/: test_listener.py  test_prerun_modifier.py  test_runner.py
tests/unit/test_parsing/: test_datadriver_reader.py  test_keyword_resolver.py  test_suite_collector.py  test_text_builder.py
tests/unit/test_pipeline/: test_artifacts.py  test_cache.py  test_select.py
tests/unit/test_selection/: test_dpp.py  test_facility.py  test_filtering.py  test_fps.py  test_kmedoids.py  test_registry.py
